# librabin

./: CMakeLists.txt  NOTICE  README.md
include/: rabin.h
src/: rabin.c
test/: CMakeLists.txt  basic.c
